--- a/requirements.txt
+++ b/requirements.txt
@@ -48,7 +48,7 @@ pyrsistent==0.15.7
 python-dateutil==2.8.1
 python3-openid==3.1.0
 pytz==2020.1
-# pywin32
+pywin32
 pywinpty==0.5.7
 pyzmq==18.1.1
 requests==2.24.0
